Fix the bug: video thumbnail out of box

--- a/styles/stylesVideos.css
+++ b/styles/stylesVideos.css
@@ -173,7 +173,7 @@ footer p.copyright{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 60%;
+    width: 100%;
     margin: auto;
 }
 
